# work

./: .gitignore  README.mk
educational/arithmetic_overflow/: CMakeLists.txt  README.mk  main.cpp
educational/compiler_gcc_crash/: CMakeLists.txt  main.cpp
educational/tiny_http_server/: CMakeLists.txt
helpers/log/: CMakeLists.txt
security/DHAlgorithm/: DHAlgorithm.pro
security/DHAlgorithm/include/: dialogentry.h  dialogentry.ui
security/DHAlgorithm/src/: dialogentry.cpp  main.cpp
statistical/binary_vs_unary/: CMakeLists.txt  PROCESSOR_OVERVIEW.md  README.mk
statistical/binary_vs_unary/src/: main.cpp
templates/factory_model/: CMakeLists.txt
templates/factory_model/include/: Base.h  Example1.h  Example2.h  Example3.h  Factory.h  Multiton.h  Multiton.hpp  Singleton.h  Singleton.hpp
templates/factory_model/src/: Base.cpp  Example1.cpp  Example2.cpp  Example3.cpp  Factory.cpp  main.cpp
templates/variant/: CMakeLists.txt
templates/variant/include/: Variant.h
templates/variant/src/: Variant.cpp  main.cpp
unary/: main.c
